--- a/frontend/index.html
+++ b/frontend/index.html
@@ -889,7 +889,7 @@
                         <!-- Response Sequences View -->
 
                         <div x-show="activeView === 'sequences'"
-                            class="flex flex-col h-full bg-white dark:bg-slate-900 transition-colors duration-200">
+                            class="flex flex-col h-full bg-gray-50 dark:bg-slate-800 transition-colors duration-200">
                             <!-- Header -->
                             <div class="p-4 border-b border-gray-200 dark:border-slate-700">
                                 <div class="flex items-center justify-between">
@@ -1393,47 +1393,48 @@
                                         <span class="font-medium" x-text="statusMessage"></span>
                                     </div>
                                 </div>
+                            </div>
 
-                                <div class="mt-4">
-                                    <button @click="saveSettings()" :disabled="connecting"
-                                        class="w-full flex items-center justify-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 disabled:cursor-not-allowed text-white text-sm font-medium rounded-lg shadow-md transition-all duration-200">
-                                        <!-- Loading Spinner -->
-                                        <svg x-show="connectButtonState === 'connecting'"
-                                            class="animate-spin -ml-1 mr-3 h-4 w-4 text-white"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
-                                                stroke-width="4">
-                                            </circle>
-                                            <path class="opacity-75" fill="currentColor"
-                                                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-                                            </path>
-                                        </svg>
-                                        <!-- Connect Icon -->
-                                        <svg x-show="connectButtonState === 'connect'" class="w-4 h-4 mr-2" fill="none"
-                                            stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                                        </svg>
-                                        <!-- Switch Icon -->
-                                        <svg x-show="connectButtonState === 'switch'" class="w-4 h-4 mr-2" fill="none"
-                                            stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
-                                        </svg>
-                                        <!-- Disconnect Icon -->
-                                        <svg x-show="connectButtonState === 'disconnect'" class="w-4 h-4 mr-2"
-                                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M6 18L18 6M6 6l12 12"></path>
-                                        </svg>
-                                        <span x-text="{
-                                    'connecting': 'Connecting...',
-                                    'connect': 'Connect',
-                                    'switch': 'Switch to Tab',
-                                    'disconnect': 'Disconnect'
-                                }[connectButtonState]"></span>
-                                    </button>
-                                </div>
+                            <!-- Connect Button (Bottom) -->
+                            <div class="border-t border-gray-200 dark:border-slate-700 p-3">
+                                <button @click="saveSettings()" :disabled="connecting"
+                                    class="w-full flex items-center justify-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 disabled:cursor-not-allowed text-white text-sm font-medium rounded-lg shadow-md transition-all duration-200">
+                                    <!-- Loading Spinner -->
+                                    <svg x-show="connectButtonState === 'connecting'"
+                                        class="animate-spin -ml-1 mr-3 h-4 w-4 text-white"
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                            stroke-width="4">
+                                        </circle>
+                                        <path class="opacity-75" fill="currentColor"
+                                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                        </path>
+                                    </svg>
+                                    <!-- Connect Icon -->
+                                    <svg x-show="connectButtonState === 'connect'" class="w-4 h-4 mr-2" fill="none"
+                                        stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                                    </svg>
+                                    <!-- Switch Icon -->
+                                    <svg x-show="connectButtonState === 'switch'" class="w-4 h-4 mr-2" fill="none"
+                                        stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
+                                    </svg>
+                                    <!-- Disconnect Icon -->
+                                    <svg x-show="connectButtonState === 'disconnect'" class="w-4 h-4 mr-2" fill="none"
+                                        stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M6 18L18 6M6 6l12 12"></path>
+                                    </svg>
+                                    <span x-text="{
+                                'connecting': 'Connecting...',
+                                'connect': 'Connect',
+                                'switch': 'Switch to Tab',
+                                'disconnect': 'Disconnect'
+                            }[connectButtonState]"></span>
+                                </button>
                             </div>
                         </div>
                     </aside>
@@ -1559,7 +1560,7 @@
                     <!-- Counters List -->
                     <div class="flex-1 flex items-center gap-3 overflow-x-auto no-scrollbar">
                         <template x-for="counter in counters" :key="counter.id">
-                            <div class="flex items-center bg-gray-50 dark:bg-slate-900/50 border border-gray-200 dark:border-slate-700 rounded-lg pl-3 pr-2 py-2 gap-2 group min-w-[200px]"
+                            <div class="flex items-stretch bg-gray-50 dark:bg-slate-900/50 border border-gray-200 dark:border-slate-700 rounded-lg pl-3 pr-2 py-2 gap-2 group min-w-[200px] h-20"
                                 :class="counter.type === 'text' ? 'border-l-4 border-l-indigo-500' : counter.type === 'traffic' ? 'border-l-4 border-l-amber-500' : 'border-l-4 border-l-emerald-500'">
 
                                 <!-- TEXT COUNTER -->
@@ -1571,7 +1572,7 @@
                                             @keydown.enter="$el.blur()">
 
                                         <!-- Session Select -->
-                                        <div class="flex items-center gap-1">
+                                        <div class="flex items-center gap-1 mt-1">
                                             <select x-model="counter.sessionId" @change="saveCounters()"
                                                 class="bg-transparent border-none focus:ring-0 text-[10px] text-gray-500 dark:text-slate-400 p-0 leading-tight appearance-none cursor-pointer hover:text-indigo-500 max-w-[100px] truncate">
                                                 <option value="all">All Sessions</option>
@@ -1599,9 +1600,12 @@
                                                 placeholder="ERROR"
                                                 class="bg-transparent border-none focus:ring-0 text-xs font-bold text-gray-700 dark:text-slate-200 p-0 placeholder-gray-400 dark:placeholder-slate-500 flex-1"
                                                 @keydown.enter="$el.blur()">
-                                            <input type="number" x-model.number="counter.resetTimer"
-                                                @input="counter.resetTimer = $el.value * 1000; saveCounters()"
-                                                :value="(counter.resetTimer || 5000) / 1000" placeholder="5"
+                                        </div>
+                                        <div class="flex items-center gap-1">
+                                            <span class="text-[9px] text-gray-500 dark:text-slate-500 w-8">Reset:</span>
+                                            <input type="text" :value="Math.round((counter.resetTimer || 5000) / 1000)"
+                                                @input="counter.resetTimer = parseInt($event.target.value) * 1000; saveCounters()"
+                                                placeholder="5"
                                                 class="bg-transparent border-none focus:ring-0 text-xs text-gray-700 dark:text-slate-200 p-0 placeholder-gray-400 dark:placeholder-slate-500 w-8"
                                                 @keydown.enter="$el.blur()">
                                             <span class="text-[9px] text-gray-500 dark:text-slate-500">sec</span>
@@ -1633,7 +1637,7 @@
                                 <!-- Display Badge (type-specific) -->
                                 <template x-if="counter.type === 'text' || !counter.type">
                                     <div @click="resetCounter(counter.id)" title="Click to reset counter"
-                                        class="px-2.5 py-1 bg-gray-200 dark:bg-slate-700 text-slate-700 dark:text-slate-200 text-xs font-black rounded-lg w-[60px] flex-shrink-0 text-center transition-all duration-300 cursor-pointer hover:bg-rose-500 hover:text-white"
+                                        class="px-2 py-0.5 bg-gray-200 dark:bg-slate-700 text-slate-700 dark:text-slate-200 text-xs font-black rounded-lg w-[60px] flex-shrink-0 text-center transition-all duration-300 cursor-pointer hover:bg-rose-500 hover:text-white self-center"
                                         style="font-variant-numeric: tabular-nums;"
                                         :class="counter.justUpdated ? 'bg-emerald-500 !text-white scale-110 shadow-[0_0_12px_rgba(16,185,129,0.4)]' : ''"
                                         x-text="Number(counter.count).toLocaleString()">
@@ -1641,7 +1645,7 @@
                                 </template>
 
                                 <template x-if="counter.type === 'traffic'">
-                                    <div class="text-2xl flex-shrink-0 transition-all duration-300"
+                                    <div class="text-2xl flex-shrink-0 transition-all duration-300 self-center"
                                         :class="counter.justUpdated ? 'scale-125' : ''">
                                         <span x-show="counter.state === 'green'">🟢</span>
                                         <span x-show="counter.state === 'yellow' || !counter.state">🟡</span>
@@ -1650,7 +1654,7 @@
                                 </template>
 
                                 <template x-if="counter.type === 'slicer'">
-                                    <div class="px-2.5 py-1 bg-slate-700 dark:bg-slate-800 text-emerald-400 dark:text-emerald-300 text-xs font-mono rounded-lg max-w-[150px] flex-shrink-0 truncate transition-all duration-300"
+                                    <div class="px-2 py-1 bg-slate-700 dark:bg-slate-800 text-emerald-400 dark:text-emerald-300 text-xs font-mono rounded-lg max-w-[200px] h-12 flex-shrink-0 overflow-auto transition-all duration-300 self-center"
                                         :class="counter.justUpdated ? 'bg-emerald-600 !text-white scale-105 shadow-[0_0_12px_rgba(16,185,129,0.4)]' : ''"
                                         :title="counter.extractedValue || '-'" x-text="counter.extractedValue || '-'">
                                     </div>
