--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1355,88 +1355,48 @@
                                     </div>
                                 </div>
 
-                                <div x-show="statusMessage" class="p-2 rounded-md border text-xs" :class="{
-                                        'bg-rose-900/30 border-rose-700 text-rose-300': statusMessageType === 'error',
-                                        'bg-amber-900/30 border-amber-700 text-amber-300': statusMessageType === 'warning',
-                                        'bg-emerald-900/30 border-emerald-700 text-emerald-300': statusMessageType === 'success',
-                                        'bg-indigo-900/30 border-indigo-700 text-indigo-300': statusMessageType === 'info' || !statusMessageType
-                                    }">
-                                    <div class="flex items-start">
-                                        <!-- Error Icon -->
-                                        <svg x-show="statusMessageType === 'error'" class="w-4 h-4 mr-1.5 flex-shrink-0"
-                                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                                        </svg>
-                                        <!-- Warning Icon -->
-                                        <svg x-show="statusMessageType === 'warning'"
-                                            class="w-4 h-4 mr-1.5 flex-shrink-0" fill="none" stroke="currentColor"
-                                            viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z">
+                                <!-- Connect Button (Bottom) -->
+                                <div class="border-t border-gray-200 dark:border-slate-700 p-3">
+                                    <button @click="saveSettings()" :disabled="connecting"
+                                        class="w-full flex items-center justify-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 disabled:cursor-not-allowed text-white text-sm font-medium rounded-lg shadow-md transition-all duration-200">
+                                        <!-- Loading Spinner -->
+                                        <svg x-show="connectButtonState === 'connecting'"
+                                            class="animate-spin -ml-1 mr-3 h-4 w-4 text-white"
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                                stroke-width="4">
+                                            </circle>
+                                            <path class="opacity-75" fill="currentColor"
+                                                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
                                             </path>
                                         </svg>
-                                        <!-- Success Icon -->
-                                        <svg x-show="statusMessageType === 'success'"
-                                            class="w-4 h-4 mr-1.5 flex-shrink-0" fill="none" stroke="currentColor"
-                                            viewBox="0 0 24 24">
+                                        <!-- Connect Icon -->
+                                        <svg x-show="connectButtonState === 'connect'" class="w-4 h-4 mr-2" fill="none"
+                                            stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                                d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                                         </svg>
-                                        <!-- Info Icon -->
-                                        <svg x-show="statusMessageType === 'info' || !statusMessageType"
-                                            class="w-4 h-4 mr-1.5 flex-shrink-0" fill="none" stroke="currentColor"
-                                            viewBox="0 0 24 24">
+                                        <!-- Switch Icon -->
+                                        <svg x-show="connectButtonState === 'switch'" class="w-4 h-4 mr-2" fill="none"
+                                            stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                                d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
                                         </svg>
-                                        <span class="font-medium" x-text="statusMessage"></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Connect Button (Bottom) -->
-                            <div class="border-t border-gray-200 dark:border-slate-700 p-3">
-                                <button @click="saveSettings()" :disabled="connecting"
-                                    class="w-full flex items-center justify-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 disabled:cursor-not-allowed text-white text-sm font-medium rounded-lg shadow-md transition-all duration-200">
-                                    <!-- Loading Spinner -->
-                                    <svg x-show="connectButtonState === 'connecting'"
-                                        class="animate-spin -ml-1 mr-3 h-4 w-4 text-white"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
-                                            stroke-width="4">
-                                        </circle>
-                                        <path class="opacity-75" fill="currentColor"
-                                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-                                        </path>
-                                    </svg>
-                                    <!-- Connect Icon -->
-                                    <svg x-show="connectButtonState === 'connect'" class="w-4 h-4 mr-2" fill="none"
-                                        stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                                    </svg>
-                                    <!-- Switch Icon -->
-                                    <svg x-show="connectButtonState === 'switch'" class="w-4 h-4 mr-2" fill="none"
-                                        stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
-                                    </svg>
-                                    <!-- Disconnect Icon -->
-                                    <svg x-show="connectButtonState === 'disconnect'" class="w-4 h-4 mr-2" fill="none"
-                                        stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M6 18L18 6M6 6l12 12"></path>
-                                    </svg>
-                                    <span x-text="{
+                                        <!-- Disconnect Icon -->
+                                        <svg x-show="connectButtonState === 'disconnect'" class="w-4 h-4 mr-2"
+                                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M6 18L18 6M6 6l12 12"></path>
+                                        </svg>
+                                        <span x-text="{
                                 'connecting': 'Connecting...',
                                 'connect': 'Connect',
                                 'switch': 'Switch to Tab',
                                 'disconnect': 'Disconnect'
                             }[connectButtonState]"></span>
-                                </button>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
                     </aside>
 
                     <!-- Tab Bar and Terminal Container -->
@@ -2012,6 +1972,64 @@
                 </div>
             </div>
         </div>
+
+        <!-- Toast Notifications (Bottom Right) -->
+        <div class="fixed bottom-4 right-4 z-50 flex flex-col gap-2 pointer-events-none">
+            <template x-for="toast in toasts" :key="toast.id">
+                <div x-show="toast.show" x-transition:enter="transition ease-out duration-300"
+                    x-transition:enter-start="translate-x-full opacity-0"
+                    x-transition:enter-end="translate-x-0 opacity-100"
+                    x-transition:leave="transition ease-in duration-200"
+                    x-transition:leave-start="translate-x-0 opacity-100"
+                    x-transition:leave-end="translate-x-full opacity-0"
+                    class="pointer-events-auto flex items-center gap-2 px-4 py-3 rounded-lg shadow-lg border max-w-sm"
+                    :class="{
+                        'bg-emerald-500 border-emerald-600 text-white': toast.type === 'success',
+                        'bg-rose-500 border-rose-600 text-white': toast.type === 'error',
+                        'bg-amber-500 border-amber-600 text-white': toast.type === 'warning',
+                        'bg-indigo-500 border-indigo-600 text-white': toast.type === 'info'
+                    }">
+                    <!-- Icon -->
+                    <div class="flex-shrink-0">
+                        <!-- Success Icon -->
+                        <svg x-show="toast.type === 'success'" class="w-5 h-5" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                        <!-- Error Icon -->
+                        <svg x-show="toast.type === 'error'" class="w-5 h-5" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                        <!-- Warning Icon -->
+                        <svg x-show="toast.type === 'warning'" class="w-5 h-5" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z">
+                            </path>
+                        </svg>
+                        <!-- Info Icon -->
+                        <svg x-show="toast.type === 'info'" class="w-5 h-5" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                    </div>
+                    <!-- Message -->
+                    <div class="flex-1 text-sm font-medium" x-text="toast.message"></div>
+                    <!-- Close Button -->
+                    <button @click="dismissToast(toast.id)" class="flex-shrink-0 hover:opacity-75 transition-opacity">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
+                </div>
+            </template>
+        </div>
+    </div>
 </body>
 
 </html>
