--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,17 +130,158 @@
         [x-cloak] {
             display: none !important;
         }
+
+        /* Window resize handles for frameless windows */
+        .window-resize-handle {
+            position: fixed;
+            background: transparent;
+            z-index: 999999;
+            -webkit-app-region: no-drag;
+            pointer-events: auto;
+            user-select: none;
+        }
+
+        .window-resize-handle:hover {
+            background: rgba(0, 0, 0, 0.05);
+        }
+
+        .window-resize-handle.top {
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 8px;
+            cursor: ns-resize;
+        }
+
+        .window-resize-handle.bottom {
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 8px;
+            cursor: ns-resize;
+        }
+
+        .window-resize-handle.left {
+            top: 0;
+            bottom: 0;
+            left: 0;
+            width: 8px;
+            cursor: ew-resize;
+        }
+
+        .window-resize-handle.right {
+            top: 0;
+            bottom: 0;
+            right: 0;
+            width: 8px;
+            cursor: ew-resize;
+        }
+
+        .window-resize-handle.top-left {
+            top: 0;
+            left: 0;
+            width: 8px;
+            height: 8px;
+            cursor: nwse-resize;
+        }
+
+        .window-resize-handle.top-right {
+            top: 0;
+            right: 0;
+            width: 8px;
+            height: 8px;
+            cursor: nesw-resize;
+        }
+
+        .window-resize-handle.bottom-left {
+            bottom: 0;
+            left: 0;
+            width: 8px;
+            height: 8px;
+            cursor: nesw-resize;
+        }
+
+        .window-resize-handle.bottom-right {
+            bottom: 0;
+            right: 0;
+            width: 8px;
+            height: 8px;
+            cursor: nwse-resize;
+        }
+
+        /* VSCode-style window controls */
+        .window-controls {
+            display: flex;
+            align-items: center;
+            height: 30px;
+            -webkit-app-region: no-drag;
+        }
+
+        .window-controls button {
+            width: 46px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: none;
+            background: transparent;
+            color: #616161;
+            cursor: pointer;
+            transition: background-color 0.15s ease, color 0.15s ease;
+            padding: 0;
+            margin: 0;
+        }
+
+        .dark .window-controls button {
+            color: #cccccc;
+        }
+
+        .window-controls button:hover {
+            background-color: rgba(128, 128, 128, 0.1);
+        }
+
+        .dark .window-controls button:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .window-controls button.close:hover {
+            background-color: #e81123;
+            color: white;
+        }
+
+        .window-controls button svg {
+            width: 12px;
+            height: 12px;
+            stroke-width: 1.5;
+            pointer-events: none;
+        }
     </style>
 </head>
 
 <body class="bg-gray-50 dark:bg-slate-900 transition-colors duration-200">
-    <div x-data="terminalApp()" @mousemove.window="doResize" @mouseup.window="stopResizing"
-        class="h-screen flex flex-col">
+    <div x-data="terminalApp()" @mousemove.window="doResize(); doWindowResize($event); handleWindowDrag($event)"
+        @mouseup.window="stopResizing(); stopWindowResizing(); stopWindowDrag()"
+        class="h-screen flex flex-col relative">
+        <!-- Window Resize Handles -->
+        <div class="window-resize-handle top" @mousedown.prevent.stop="startWindowResize('top', $event)"></div>
+        <div class="window-resize-handle bottom" @mousedown.prevent.stop="startWindowResize('bottom', $event)"></div>
+        <div class="window-resize-handle left" @mousedown.prevent.stop="startWindowResize('left', $event)"></div>
+        <div class="window-resize-handle right" @mousedown.prevent.stop="startWindowResize('right', $event)"></div>
+        <div class="window-resize-handle top-left" @mousedown.prevent.stop="startWindowResize('top-left', $event)">
+        </div>
+        <div class="window-resize-handle top-right" @mousedown.prevent.stop="startWindowResize('top-right', $event)">
+        </div>
+        <div class="window-resize-handle bottom-left"
+            @mousedown.prevent.stop="startWindowResize('bottom-left', $event)"></div>
+        <div class="window-resize-handle bottom-right"
+            @mousedown.prevent.stop="startWindowResize('bottom-right', $event)"></div>
         <header
-            class="bg-gray-100 dark:bg-slate-900 border-b border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200 flex items-center px-3 py-1.5 select-none text-xs h-10 shrink-0">
+            class="bg-gray-100 dark:bg-slate-900 border-b border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200 flex items-center px-3 py-1.5 select-none text-xs h-10 shrink-0"
+            style="-webkit-app-region: drag; overflow: visible; position: relative; z-index: 1000;"
+            @mousedown="startWindowDrag($event)" @mousemove="handleWindowDrag($event)" @mouseup="stopWindowDrag()">
 
             <!-- App Icon -->
-            <div class="mr-4 flex items-center justify-center">
+            <div class="mr-4 flex items-center justify-center" style="-webkit-app-region: no-drag;">
                 <div
                     class="w-6 h-6 bg-white dark:bg-slate-800 rounded flex items-center justify-center shadow-sm overflow-hidden border border-gray-200 dark:border-slate-700">
                     <img src="logo.png" alt="ZField Logo" class="w-full h-full object-contain">
@@ -148,7 +289,8 @@
             </div>
 
             <!-- Menu Items -->
-            <div class="flex items-center space-x-1 text-slate-700 dark:text-slate-300">
+            <div class="flex items-center space-x-1 text-slate-700 dark:text-slate-300"
+                style="-webkit-app-region: no-drag;">
                 <!-- File Menu -->
                 <div class="relative" @click.away="if(activeMenu==='file') closeMenu()">
                     <button @click="openMenu('file')" class="px-3 py-1 rounded transition-colors"
@@ -261,7 +403,7 @@
             <div class="flex-1"></div>
 
             <!-- Right-side Connection Indicator -->
-            <div class="flex items-center space-x-3 mr-2">
+            <div class="flex items-center space-x-3 mr-2" style="-webkit-app-region: no-drag;">
                 <div class="flex items-center space-x-2 px-2 py-1 rounded-md transition-colors duration-200"
                     :class="connected ? 'bg-emerald-500/10 dark:bg-emerald-500/20' : 'bg-gray-200 dark:bg-slate-800'">
                     <div class="relative flex items-center justify-center">
@@ -277,6 +419,37 @@
                         class="text-[11px] text-gray-500 dark:text-slate-400 font-mono border-l border-gray-300 dark:border-slate-600 pl-2 ml-1"
                         x-text="currentPort"></span>
                 </div>
+            </div>
+
+            <!-- Window Controls (VSCode Style) -->
+            <div class="window-controls ml-2" style="flex-shrink: 0;">
+                <button @click="windowMinimize()" title="Minimize">
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M20 12H4"></path>
+                    </svg>
+                </button>
+                <button @click="windowMaximize()" title="Maximize">
+                    <!-- Two overlapping squares (restore style) when windowed -->
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" x-show="!isMaximized">
+                        <!-- Back square (bottom-left) -->
+                        <rect x="4" y="6" width="12" height="12" rx="1.5" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="1.5" />
+                        <!-- Front square (top-right) -->
+                        <rect x="8" y="4" width="12" height="12" rx="1.5" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="1.5" />
+                    </svg>
+                    <!-- Single square when maximized (can restore) -->
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" x-show="isMaximized"
+                        style="display: none;">
+                        <rect x="4" y="6" width="16" height="12" rx="1.5" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="1.5" />
+                    </svg>
+                </button>
+                <button @click="windowClose()" class="close" title="Close">
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
             </div>
         </header>
 
